--- a/Index.html
+++ b/Index.html
@@ -30,10 +30,10 @@
 			<ul class="menu">
 				<li><a href="#">Inicio</a>
 					<ul class="submenu">
-						<li><a href="index.html">Información General</a></li>
-						<li><a href="objetivosovi.html">Objetivos del OVI</a></li>
-						<li><a href="objetivoscurso.html">Objetivos del Curso</a></li>
-						<li><a href="tematicas.html">Temáticas</a></li>
+						<li><a href="Index.html">Información General</a></li>
+						<li><a href="Objetivosovi.html">Objetivos del OVI</a></li>
+						<li><a href="Objetivoscurso.html">Objetivos del Curso</a></li>
+						<li><a href="Tematicas.html">Temáticas</a></li>
 
 					</ul></li>
 				<li><a href="#">Lecturas</a>
