--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 			<ul class="menu">
 				<li><a href="#">Inicio</a>
 					<ul class="submenu">
-						<li><a href="Index.html">Información General</a></li>
-						<li><a href="Objetivosovi.html">Objetivos del OVI</a></li>
-						<li><a href="Objetivoscurso.html">Objetivos del Curso</a></li>
-						<li><a href="Tematicas.html">Temáticas</a></li>
+						<li><a href="index.html">Información General</a></li>
+						<li><a href="objetivosovi.html">Objetivos del OVI</a></li>
+						<li><a href="objetivoscurso.html">Objetivos del Curso</a></li>
+						<li><a href="tematicas.html">Temáticas</a></li>
 
 					</ul></li>
 				<li><a href="#">Lecturas</a>
 					<ul class="submenu">
 						<li><a href="presentacion.html">Presentación</a></li>
 						<li><a href="historia.html">Historia</a></li>
-						<li><a href="Estandares.html">Estandares</a></li>
+						<li><a href="estandares.html">Estandares</a></li>
 						<li><a href="impactos.html">Impacto en Redes</a></li>
 					</ul></li>
 				<li><a href="#">Multimedia</a>
