--- a/objetivosovi.html
+++ b/objetivosovi.html
@@ -27,7 +27,7 @@
 					<ul class="submenu">
 						<li><a href="presentacion.html">Presentación</a></li>
 						<li><a href="historia.html">Historia</a></li>
-						<li><a href="Estandares.html">Estandares</a></li>
+						<li><a href="estandares.html">Estandares</a></li>
 						<li><a href="impactos.html">Impacto en Redes</a></li>
 					</ul></li>
 				<li><a href="#">Multimedia</a>
