--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta content="GlorizVvianaGomez-Luis Contreras" name="author"/>
 	<meta content="Pagina creada para desarrollo del Fase de Construcción " name="description" />
     <meta content="Todo sobre la Seguridad Informatica" name="keywords" />
-    <link rel="stylesheet" href="css/normalze.css">
+    <link rel="stylesheet" href="css/normalize.css">
 	<title>Inicio</title>
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" type="text/css" href="font/FontAwesome">
